# CoreRec

./: .gitignore  .pre-commit-config.yaml  404.html  786n.csv  786w.csv  BEFORE_CLEANUP_READ_THIS.md  BRANCH_STRUCTURE.md  BUILD_DOCS.md  CHANGELOG.md  CLEANUP_PLAN.md  CLEANUP_READY.md  CONTRIBUTING.md  CRITICAL_ISSUES_ANALYSIS.md  DEMO_FRONTENDS_COMPLETION.md  ENGINE_REFACTORING_GUIDE.md  FEATURE_SHOWCASE.md  IMPLEMENTATION_NOTES.md  LICENSE  Learning.ipynb  Learning.md  MODERNIZATION_SUMMARY.md  MODERN_RECSYS_GUIDE.md  QUICK_START_MODERN.md  README.md  README_tmp.html  Readme copy.md  TOP5_QUICK_REFERENCE.md  Use_cases.py  best_model.pth  cleanup_engines.sh  core_rec.py  corerec_clean  create_placeholders.sh  data.ipynb  eg_imshow.py  eg_ncf.py  fix_fstrings.py  fix_warnings.sh  futureupdates.md  graph.csv  (+28 more)
.devcontainer/: devcontainer.json
.history/: .gitignore_20240705204441  .gitignore_20240705204444  .gitignore_20240705204901  .gitignore_20240710024934  .gitignore_20240710024937  .gitignore_20240710024956  .gitignore_20240710025000  .gitignore_20240710025026  README_20240622203010.md  README_20240710024550.md  README_20240710024819.md  README_20240710024822.md  README_20240710024824.md  README_20240710025505.md  README_20240710025509.md  c_20240710030913.md  gitignore_maker_20240705204656.py  gitignore_maker_20240705204740.py  gitignore_maker_20240705204743.py  gitignore_maker_20240705204746.py  gitignore_maker_20240705204747.py  gitignore_maker_20240705204749.py
BATCH1_REVIEW/: index.html
BATCH2_3_COMPLETE/: index.html
BATCH3_MODELS/: index.html
CORRECT_PARAMETERS/: index.html
CRLearn/: __init__.py  ml_1m.py
CR_LEARN_API_FIX/: index.html
CoreRec/: setup.py
FINAL_25_MODELS_COMPLETE/: index.html
FINAL_DELIVERY_PLAN/: index.html
SANDBOX/: MHalgorithms.py  XAI.py  bigGraphs_testing.py  blobbag.csv  core_rec.py  data.ipynb  labelele.csv  m.py  meta_exploit.py  model.pth  operation0.py  pushed_model_e50_.pth  requirements.txt  tempCodeRunnerFile.py  test.py  test2.py  test6.py  test_meta.py  test_tmp.html  tester_ddp.py  testing.py  trained_model.pth
STATUS/: index.html
SoA/: index.html
USECASES/: Use_cases.py  cora.ipynb  custommodel.py  custommodelweight.py  customthreshold.py  labels.py  pop.csv  tempCodeRunnerFile.py  transfmodel.py  weightG.py
about/: index.html
advanced/: index.html
api/: index.html
backuocr/: core_rec.py
contributing/: index.html
core/: index.html
corerec/: 12datasets.py  Tmodel.py  __init__.py  aitm.py  async_ddp.py  autoencoder.py  base_recommender.py  cli.py  cnn.py  common_import.py  constants.py  core_rec.py  datasets.py  dkn.py  hyper_train.py  judge.py  metrics.py  models.py  predict.py  py.typed  rnn.py  run_algo_tests.py  sshh.py  timecapsule.py  train.py  transformer.py  vish_graphs.py  visualization.py
corerec/csrc/: CMakeLists.txt  __init__.py  build.py  setup.py
corerec/csrc/ops/: embedding_ops.cpp  embedding_ops.h
corerec/csrc/python/: module.cpp  module.h
corerec/csrc/tensor/: tensor.h
cr_learn/: setup.py
custom_data/: my_videos.csv
data/: index.html
datasets/: blobbag.csv
datasets1/: weight_matrix.csv
docs/: BATCH1_REVIEW.md  BATCH2_3_COMPLETE.md  BATCH3_MODELS.md  CORRECT_PARAMETERS.md  CR_LEARN_API_FIX.md  FINAL_25_MODELS_COMPLETE.md  FINAL_DELIVERY_PLAN.md  README.md  STATUS.md  SoA.md  create_final_placeholders.sh  create_more_placeholders.sh  index.md  requirements.txt  updatedmap.md
documentation/: conf.py  context_personalization.rst  fairness_explainability.rst  graph_based_algorithms.rst  index.rst  miscellaneous_techniques.rst  other_approaches.rst  probabilistic_statistical_methods.rst  tfidf_recommender.rst
engine/: Tmodel.py  __init__.py  async_ddp.py  common_import.py  core_rec.py  de.py  models.py  predict.py  vish_graphs.py
engines/: index.html
examples/: INSTAGRAM_REELS_README.md  README.md  REAL_DATA_SUCCESS.md  content_filter_quickstart.py  content_filter_tfidf_example.py  demo_frontends_example.py  dien_example.py  engines_dcn_example.py  engines_deepfm_example.py  engines_gnnrec_example.py  engines_mind_example.py  engines_nasrec_example.py  engines_quickstart.py  engines_sasrec_example.py  imshow_connector_example.py  index.html  instagram_reels_with_real_data.py  modern_pipeline_example.py  pipeline_example.py  run_all_algo_tests_example.py  unionized_fast_example.py  unionized_fast_recommender_example.py  unionized_geomlc_example.py  unionized_quickstart.py  unionized_rbm_example.py  unionized_rlrmc_example.py  unionized_sar_example.py  utils_example_data.py  v.py
roadmap/: DOCUMENTATION_GUIDE.md
sample_data/: netflix_demo.csv  spotify_demo.csv  youtube_demo.csv
scripts/: add_logging_to_engines.py  add_missing_methods.py  add_remaining_models_part1.py  add_validation_to_engines.py  audit_models.py  batch2_remaining.py  bulk_migrate.sh  fix_all_orphaned_code.py  fix_black_parse_errors.py  fix_indentation.py  fix_stub_engines.py  fix_validation_syntax_errors.py  format_code.sh  generate_all_21_tutorials.py  generate_all_tutorials.py  generate_docs.py  generate_final_docs.py  generate_unique_docs.py  inject_methods.py  migrate_models.py  model_database.py  regenerate_batch1.py
(+2714 files in other folders)
