# CoreRec Project Configuration
# Modern Python packaging configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corerec"
dynamic = ["version"]
description = "Advanced Recommendation Systems Library with State-of-the-Art Algorithms"
readme = "README.md"
authors = [
    {name = "Vishesh Yadav", email = "vishesh@corerec.tech"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0,<3.0.0",
    "pandas>=1.3.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scikit-learn>=0.24.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "tqdm>=4.62.0,<5.0.0",
    "argcomplete>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
    "isort>=5.10",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.19",
]
transformers = [
    "transformers>=4.0",
]
all = [
    "corerec[dev,docs,transformers]",
]

[project.scripts]
corerec = "corerec.cli:main"

[project.urls]
Homepage = "https://github.com/vishesh9131/CoreRec"
Documentation = "https://vishesh9131.github.io/CoreRec/"
Repository = "https://github.com/vishesh9131/CoreRec"
"Bug Tracker" = "https://github.com/vishesh9131/CoreRec/issues"

[tool.setuptools.dynamic]
version = {attr = "corerec.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["corerec*"]
exclude = ["tests*", "examples*", "docs*", "src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | \.pytest_cache
  | \.coverage
  | htmlcov
  | src/SANDBOX
  | __pycache__
  | \.ipynb_checkpoints
)/
'''
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = false

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["corerec"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=corerec",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["corerec"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "corerec.torch_nn.*",
    "corerec.torch_utils.*",
    "corerec.csrc.*",
]
ignore_errors = true

